dark mode bug fix

--- a/main.css
+++ b/main.css
@@ -28,7 +28,8 @@
 }
 
 .about_data{
-    background-color: red;
+    flex: 1;
+    font-size: 16px;
 }
 
 
